# predictive-funding-challenge

./: .gitignore  README.md  exploration.ipynb  pyproject.toml
notebooks/: exploration.ipynb  github.ipynb  oso.ipynb  plot_diverse_pareto.ipynb  sandbox.ipynb
src/: checks.py  data.py  features.py  train.py  train_decorrelate.py
src/deepfunding/: checks.py  data.py
