[project]
name = "deepfunding"
version = "1.0.0"
description = "Exploring fair open-source dependency tree funding allocation by using AI models to allocate weights and validating results with human spot-checking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-bigquery-storage>=2.27.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "polars>=1.18.0",
    "pyarrow>=18.1.0",
    "pygithub>=2.5.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ruff>=0.8.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
