[project]
name = "predictive-funding-challenge"
version = "1.0.0"
description = "Creating datasets and models to predict the amount of past funding received by open source projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-bigquery-storage>=2.27.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "pygithub>=2.5.0",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.3.1",
]

[dependency-groups]
dev = ["ruff>=0.8.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
